--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -1,23 +1,18 @@
-.campo-texto{
-margin: 10px 5px;
-font-weight: bold;
-}
-
-.campo-texto label{
+.lista-suspensa label {
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
+    font-weight: bold;
 }
 
-.campo-texto input{
+.lista-suspensa select {
+
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.30);
     width: 100%;
-    margin-bottom: 10px;
     border: none;
     font-size: 24px;
     box-sizing: border-box;
     padding: 20px 10px;
 }
-
