--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -16,3 +16,14 @@
     box-sizing: border-box;
     padding: 20px 10px;
 }
+
+.lista-suspensa select option{
+
+    padding: 20px;
+    margin: 20px;
+    font-size: 20px;
+    border: none;
+
+
+    
+} 
