--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -4,7 +4,7 @@
 }
 
 .colaborador .cabecalho {
-    background-color: #f0f0f0;
+    background-color: #4b36a7;
     border-radius: 10px 10px 0px 0px;
 }
 
@@ -19,14 +19,14 @@
     background: #ffffff;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25);
     border-radius: 0px 0px 10px 10px;
-    padding-top: 90px;
-    padding-bottom: 40px;
+    padding-top: 40px;
+    padding-bottom: 10px;
 }
 
 .colaborador .rodape h4{
     color: #6278f7;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 10px;
     font-weight: bold;
     margin-bottom: 8px;
 }
@@ -34,6 +34,6 @@
 .colaborador .rodape h5{
     color: #212121;
     font-size: 18px;
-    line-height: 22px;
-    padding: 0 16px;
+    line-height: 0px;
+    padding: px 16px;
 }
