--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -11,12 +11,13 @@
     padding-bottom: 10px;
 }
 
-
-
-
-
-
-
 .time h3:hover {
     border-bottom: 4px dashed #57c278;
+}
+
+.time .colaboradores{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+    flex-wrap: wrap;
 }
